# atlas-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 20260123_01_initial_mvp_schema.py  20260123_02_add_strategy_import_fields.py  20260124_01_execution_layer.py  20260124_02_signal_logs.py  20260212_01_referrals.py  20260219_01_trade_error_message.py
api/: config.py  main.py
api/cli/: backfill.py  import_strategy.py
api/execution/: __init__.py  market_data.py  models.py  position_tracker.py  scheduler.py  signal_generator.py  signal_logger.py  strategy_loader.py  trade_executor.py  trade_logger.py
api/models/: database.py  import_schema.py  schemas.py
api/onchain/: __init__.py  gmx.py  vault_reader.py  wallet.py
docs/: FORKNET_TESTING_PLAN.md  MAINNET_TESTING_PLAN.md  TRADING_FLOW.md  import-schema.md  sprint-plan.md
scripts/: execute_trade.py  forknet_e2e_test.py
tests/: conftest.py  test_api_integration.py  test_app_meta.py  test_backfill.py  test_config.py  test_database.py  test_health.py  test_import_cli.py  test_import_integration.py  test_import_schema.py  test_import_service.py  test_market_data.py  test_models_schema.py  test_pools.py  test_pools_service.py  test_position_tracker.py  test_referral_indexer.py  test_referrals_migration.py  test_referrals_routes.py  test_scheduler.py  test_signal_generator.py  test_strategies.py  test_strategy_loader.py  test_trade_executor.py  test_vault_reader.py  test_wallet_manager.py
(+36 files in other folders)
