[project]
name = "atlas-api"
version = "0.1.0"
description = "Operational backend for Atlas - API and trade execution"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "aiohttp>=3.9.0",
    "apscheduler>=3.10.4",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "web3>=6.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[project.scripts]
atlas-import = "api.cli.import_strategy:main"
atlas-backfill = "api.cli.backfill:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that require network access and external services",
    "integration: integration tests that require external resources",
    "forknet: end-to-end tests on Anvil Arbitrum fork (requires Foundry)",
    "mainnet: read-only tests against Arbitrum mainnet (no transactions)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*"]
